assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
// -----  gu-sass ----- //

@import '~stylesheets/gu-sass/gu-sass';


// ----- Shared Components ----- //

@import '~components/countryGroupSwitcher/countryGroupSwitcher';
@import '~components/ctaLink/ctaLink';
@import '~components/footer/footer';
@import '~components/headers/countrySwitcherHeader/countrySwitcherHeader';
@import '~components/leftMarginSection/leftMarginSection';
@import '~components/priceCta/priceCta';
@import '~components/customerService/customerService';
@import 'components/independentJournalismSection';


// ----- Page-Specific Styles ----- //

#digital-subscription-landing-page-int,
#digital-subscription-landing-page-uk,
#digital-subscription-landing-page-us,
#digital-subscription-landing-page-au {
  .component-left-margin-section__content {
    overflow-x: hidden;
    @include mq($from: leftCol) {
      overflow-x: visible;
    }
  }

  // ----- Product Block

  .product-block {
    .component-left-margin-section__content {
      position: relative;

      @include mq($from: desktop) {
        border-left: 1px solid gu-colour(garnett-neutral-4);
      }
    }

    .component-grid-image {
      width: 100%;
      display: block;

      @include mq($from: mobileLandscape, $until: phablet) {
        width: 460px;
        margin: 0 auto;
      }

      @include mq($from: tablet) {
        width: 345px;
      }
    }

    .component-price-cta {
      @include mq($until: desktop) {
        margin-top: $gu-v-spacing * 2;
      }
    }

    .component-price-cta__cancel {
      background-color: #fff;
    }
  }

  .product-block__product {
    @include mq($from: phablet) {
      display: inline-block;
      width: 50%;
      vertical-align: top;
    }

    @include mq($from: desktop) {
      width: 485px;
    }

    @include mq($from: leftCol) {
      width: 520px;
    }
  }

  .product-block__image {
    border-bottom: 1px solid gu-colour(garnett-neutral-4);
    padding: 0 ($gu-h-spacing / 2);
    margin-bottom: $gu-v-spacing / 2;

    @include mq($from: desktop) {
      position: relative;
    }

    .svg-penny-farthing-circles {
      display: none;

      @include mq($from: desktop) {
        display: block;
        position: absolute;
        width: 250px;
        bottom: 0;
        left: 255px;
      }

      @include mq($from: leftCol) {
        left: 220px;
      }
    }
  }

  .product-block__heading {
    font-family: $gu-egyptian-web;
    font-weight: 200;
    font-size: 22px;
    line-height: 26px;
    padding: 0 ($gu-h-spacing / 2) $gu-v-spacing;

    @include mq($from: phablet) {
      font-size: 28px;
      line-height: 1.14;
      width: 700px;
    }

    @include mq($from: desktop) {
      font-size: 36px;
      line-height: 1.11;
      width: 600px;
      padding-bottom: $gu-v-spacing * 3;
    }
  }

  .product-block__copy {
    padding: 0 ($gu-h-spacing / 2) $gu-v-spacing;
  }

  .product-block__product-heading {
    color: #fff;
    font-weight: bold;
    font-family: $gu-egyptian-web;
    line-height: 1;
    display: inline;
    padding: 0 5px 3px;
  }

  .product-block__product-description {
    margin: $gu-v-spacing / 2 0 $gu-v-spacing;
    font-size: 16px;
    line-height: 1.25;
    font-family: $gu-egyptian-web;
  }

  .component-feature-list {
    font-size: 16px;
    line-height: 1.25;
    font-family: $gu-egyptian-web;
    list-style-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 10 10"><circle cx="5" cy="5" r="5" fill="#ff4e36"/></svg>');
    margin-left: 26px;

    @include mq($from: leftCol) {
      columns: 2;
      column-gap: 54px;
    }
  }

  .component-feature-list__heading {
    font-weight: bold;
    display: inline;
    vertical-align: top;
  }

  .component-feature-list__item {
    margin-bottom: $gu-v-spacing / 2;
  }

  .product-block__highlight {
    font-weight: normal;
    background-color: gu-colour(news-garnett-highlight);
    padding: 0 2px;
  }

  .product-block__product--premium-app {
    .product-block__product-heading {
      background-color: gu-colour(news-garnett-media-main-1);
    }
  }

  .product-block__product--daily-edition {
    .component-grid-image {
      @include mq($from: desktop) {
        position: relative;
        left: -100px;
      }

      @include mq($from: leftCol) {
        left: -135px;
      }
    }

    .product-block__product-heading {
      background-color: gu-colour(sport-garnett-media-main-1);
    }

    .component-feature-list {
      list-style-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 10 10"><circle cx="5" cy="5" r="5" fill="#00b2ff"/></svg>');
    }
  }

  .product-block__ampersand {
    border-radius: 600px;
    width: 80px;
    height: 80px;
    text-align: center;
    font-size: 50px;
    line-height: 80px;
    font-family: $gu-egyptian-web;
    font-weight: bold;
    background-color: gu-colour(news-garnett-highlight);
    margin: 0 auto -35px;
    position: relative;

    @include mq($from: phablet) {
      position: absolute;
      left: calc(50% - 40px);
      top: 90px;
    }

    @include mq($from: tablet) {
      left: calc(140px + 25%);
    }

    @include mq($from: desktop) {
      width: 100px;
      height: 100px;
      font-size: 60px;
      line-height: 100px;
      top: 167px;
      left: 325px;
    }
  }

  .component-grid-picture__image {
    display: block;
  }

  .digital-subscription-landing-header__title {
    position: relative;
    width: 100%;
    height: 92px;
    background-color: #000000;
  }

  .digital-subscription-landing-header__title-copy {
    color: #ffffff;
    font-family: $gu-egyptian-web;
    font-weight: bold;
    margin-left: 10px;
    padding-top: 2px;
    font-size: 26px;
    line-height: 29px;

    @include mq($until: mobileMedium) {
      width: 320px;
    }

    @include mq($from: mobileMedium, $until: tablet) {
      width: 330px;
    }

    @include mq($from: tablet, $until: leftCol) {
      width: 500px;
      font-size: 32px;
      line-height: 36px;
    }

    @include mq($from: leftCol) {
      width: 490px;
      margin-left: 12px;
      font-size: 36px;
      line-height: 42px;
    }
  }

  .component-left-margin-section--header-block {
    .component-grid-picture {
      position: relative;
    }
    
    .component-price-cta__cancel {
      background-color: #f6f6f6;
    }

    .svg-title-circles-left-mobile {
      position: absolute;
      top: 300px;
      height: 140px;
      right: calc(50% + 70px);

      @include mq($from: mobileMedium) {
        top: 310px;
        height: 150px;
      }

      @include mq($from: tablet) {
        display: none;
      }
    }

    .svg-title-circles-left-tablet {
      position: absolute;
      @include mq($until: tablet) {
        display: none;
      }
      @include mq($from: tablet) {
        top: 200px;
        right: calc(50% + 10px);
        width: 374px;
        height: 418px;
      }
      @include mq($from: leftCol) {
        top: 235px;
        right: calc(50% + 210px);
        height: 430px;
        width: 430px;
      }
    }

    .svg-title-circles-right-mobile {
      position: absolute;
      top: 335px;
      left: calc(50% + 120px);
      @include mq($until: mobileMedium) {
        width: 60px;
      }
      @include mq($from: mobileMedium) {
        width: 80px;
      }
      @include mq($from: tablet) {
        display: none;
      }
    }

    .svg-title-circles-right-tablet {
      position: absolute;
      @include mq($until: tablet) {
        display: none;
      }
      @include mq($from: tablet) {
        top: 300px;
        left: calc(50% + 177px);
        width: 210px;
      }
      @include mq($from: leftCol) {
        top: 350px;
        left: calc(50% + 307px);
      }
    }

    .component-grid-picture__image {
      margin-left: auto;
      margin-right: auto;
      @include mq($until: tablet) {
        margin-top: 16px;
      }
      @include mq($from: tablet, $until: leftCol) {
        margin-top: 35px;
      }
      @include mq($from: leftCol) {
        margin-top: 37px;
        margin-left: 12px;
      }
    }
  }
}

.component-left-margin-section--grey {
  background: gu-colour(neutral-6);
}

